# claw-code

./: .gitignore  .vercelignore  CLAUDE.md  Dockerfile  PIPELINE.md  VISION.md  WORKER-PROMPT.md  ghost-context.txt
.ghost/: abbreviations.toml  macros.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css  main.jsx
prompts/: README.md  phase1-sender-identity.md  phase2-outbound-guard.md  phase3-ack-and-history.md  phase4-sms-polish.md  phase5-sms-backend.md  phase6-sms-dashboard.md
rust/.claw/sessions/905e974b43ffebb2/: session-1776120124367-0.jsonl  session-1776120798885-0.jsonl  session-1776120905463-0.jsonl  session-1776131266525-0.jsonl  session-1776131623518-0.jsonl  session-1776131637879-0.jsonl  session-1776132977640-0.jsonl
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: bible.rs  bible_ingest.rs  chat_dispatcher.rs  compress.rs  constants.rs  contacts.rs  daemon.rs  db.rs  director.rs  gerald.rs  guard.rs  http_client.rs  macros.rs  main.rs  memory.rs  orchestrator.rs  routing.rs  search.rs  sms.rs
rust/migrations/: 001_initial.sql  002_shrink_embedding_dim.sql  003_scholar_solutions.sql  004_response_cache.sql  005_bible_schema.sql  006_sms_history.sql  007_sms_loadbearing.sql  008_sms_contacts.sql  009_sms_unread.sql  010_contact_notes.sql
scripts/: daemon-install.ps1  download-bible-data.ps1
